# hts-disruption-assistance-engine

./: .gitignore  CLAUDE.md  packages.txt  pyproject.toml  requirements.txt
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.streamlit/: config.toml
config/: registry.yaml
specs/001-disruption-assistance-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-disruption-assistance-engine/checklists/: requirements.md
specs/001-disruption-assistance-engine/contracts/: briefing-evidence.md  engine-outputs.md  export-layout.md  registry-schema.md
specs/002-fee-as-fare-pct/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fee-as-fare-pct/checklists/: requirements.md
src/cli/: export.py  generate_data.py
src/config/: loader.py  schema.py
src/data/: events.py  generator.py  schema.py
src/engine/: ab_test.py  aggregates.py  briefing.py  briefing_prompts.py  classification.py  consistency.py  dataset.py  derivations.py  metrics.py  performance.py  pnl_flow.py  projection.py  variance.py
src/export/: html_report.py  pdf.py  xlsx.py
src/ui/: ab_test.py  app.py  components.py  performance.py  projection.py  variance.py
tests/consistency/: test_cross_view_reconciliation.py
tests/integration/: test_ab_test_view.py  test_briefing_llm_disabled.py  test_briefing_openrouter.py  test_determinism.py  test_export_cli.py  test_export_html.py  test_export_pdf.py  test_export_xlsx.py  test_performance_view.py  test_performance_view_post_migration.py  test_projection_view.py  test_streamlit_smoke_us1.py  test_variance_view.py
tests/unit/: test_aggregates.py  test_briefing_render_substitution.py  test_briefing_template_fallback.py  test_classification.py  test_data_generator_determinism.py  test_dataset.py  test_derivations.py  test_events_scope.py  test_fee_derivation.py  test_layer_boundaries.py  test_metrics.py  test_no_hardcoded_literals.py  test_pnl_flow.py  test_registry_schema.py
(+2 files in other folders)
